	* src/gdk-pixbuf-drawable.[ch]: Added. (Actually, Miguel committed
	them, but I wrote them).

	* src/gdk-pixbuf-drawable.h: Added a missing ; so things will now
	compile.

	* src/Makefile.am: Added gdk-pixbuf-drawable.[ch] to
	libgdk_pixbuf_la_SOURCES and libgdk_pixbufinclude_HEADERS.

	* src/gdk-pixbuf-drawable.c: Added #include "gdk-pixbuf-drawable.h"
	to fix compilation.

1999-09-22  Michael Meeks  <michael@nuclecu.unam.mx>

	* src/gdk-pixbuf.c (gdk_pixbuf_new): created.
	(gdk_pixbuf_scale): use gdk_pixbuf_new + return a new scaled image.

	* src/gdk-pixbuf.h (struct _GdkPixBuf): Re-organise struct, + add
	GdkPixBufUnrefFunc + gdk_pixbuf_new.

	* src/io-jpeg.c (image_load): clean to use gdk_pixbuf_new.

	* src/io-xpm.c (_pixbuf_create_from_xpm): ditto.

	* src/io-tiff.c (image_load): ditto + fix leak

	* src/io-png.c (image_load): ditto + add more exit points; monitor.png
	crashes this module ( add warning :-)

	* src/io-bmp.c (image_load): ditto.

	* src/io-gif.c (image_load): ditto.

1999-09-18  Michael Meeks  <michael@nuclecu.unam.mx>

	* src/gdk-pixbuf.c (gdk_pixbuf_scale): Hack rgba support in so
	it doesn't crash scaling with alpha.

1999-09-17  Federico Mena Quintero  <federico@redhat.com>

	* src/io-bmp.c (image_load): Set the initial ref_count to 1.

	* src/io-gif.c (image_load): Likewise.

	* src/io-jpeg.c (image_load): Likewise.

	* src/io-png.c (image_load): Likewise.

	* src/io-tiff.c (image_load): Likewise.

	* src/io-xpm.c (_pixbuf_create_from_xpm): Likewise.

	* src/gdk-pixbuf-io.c (gdk_pixbuf_load_image): Added an assertion
	for the ref_count to be != 0.

	* src/gdk-pixbuf.c (gdk_pixbuf_ref): Be more paranoid with sanity
	checking.
	(gdk_pixbuf_unref): Fix incorrect sanity check and comparison.

1999-08-09  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* src/io-png.c (image_save): Fixed compiler warnings.  Fixed write
	to unallocated memory (row_ptr), and fixed its type as well.  Take